Пробуем расчитать покрытие кода с помощью JaCoCo